# grpc-gateway-boilerplate

./: .gitignore  CMakeLists.txt  README.md
gateway/: go.mod  main.go
gateway/proto/: greeter.swagger.json
proto/: greeter.proto
server/: greeter_server.cc
